--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
 <body>
     <div class="image"></div>
     <div class="speech">
-        <b><span style="font-size: 30px; color: #79a1d5;">Я один из кандидатов Tiffany!</span></b><br><br>
-            Я уже второй раз в кампусе, поэтому мне будет очень просто!<br><br>
-            Я очень ответственная, доброжелательная, милосердная!<br><br> 
-            Я всегда буду вам помогать, поддерживать!<br><br> 
-            Я хочу, чтобы лагерь процветал и развивался!<br><br> 
-            Я приложу все силы и возможности для развития и реализации крутых идей!<br><br> 
-            Я думаю, каждый хочет, чтобы в нашем кампусе всё было весело и интересно!<br><br> 
-            С Вашей помощью мы сможем проживать в лагере комфортно и замечательно!<br><br> 
+        <b><span style="font-size: 30px; color: #79a1d5; line-height: 40px;">Я один из кандидатов<br>Tiffany!</span></b><br>
+        <ul>
+            <li>Я уже второй раз в кампусе, поэтому мне будет очень просто!</li>
+            <li>Я очень ответственная, доброжелательная, милосердная!</li>
+            <li>Я всегда буду вам помогать, поддерживать!</li>
+            <li>Я хочу, чтобы лагерь процветал и развивался!</li>
+            <li> Я приложу все силы и возможности для развития и реализации крутых идей!</li>
+            <li>Я думаю, каждый хочет, чтобы в нашем кампусе всё было весело и интересно!</li>
+            <li>С Вашей помощью мы сможем проживать в лагере комфортно и замечательно!</li>
+
+        </ul>
             Голосуй за меня и у тебя всё будет круто!<br><br> 
             <b>С уважением Tiffany!</b>
     </div>
-    <div class="secret_place">Тебя ждут в __ домике<br><br>   Беги скорее!<br><br>   (там конфетки)</div>
+    <div class="secret_place">Тебя ждут в __ домике<br><br>   Беги скорее!<br><br>   (тебя ждет сюрприз)</div>
 </body>
 </html>
