--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="image"></div>
     <div class="speech">
-        <b><span style="font-size: 30px; color: #79a1d5; line-height: 40px;">Я один из кандидатов<br>Tiffany!</span></b><br>
+        <b><span style="font-size: 40px; color: #79a1d5; line-height: 60px; text-wrap: none;">Привет! Я&nbsp;Tiffany!</span></b><br>
         <ul>
             <li>Я уже второй раз в кампусе, поэтому мне будет очень просто!</li>
             <li>Я очень ответственная, доброжелательная, милосердная!</li>
