--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
             Голосуй за меня и у тебя всё будет круто!<br><br> 
             <b>С уважением Tiffany!</b>
     </div>
-    <div class="secret_place">Тебя ждут в __ домике<br><br>   Беги скорее!<br><br>   (тебя ждет сюрприз)</div>
+    <div class="secret_place">Тебя ждут в 5 домике<br><br>   Беги скорее!<br><br>   (тебя ждет сюрприз)</div>
 </body>
 </html>
